<resources>
    <string name="app_name">Pharmacy</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_kiem_ke">Menu kiểm kê</string>
    <string name="ds_phieu_kiem_ke">DS phiếu kiểm kê</string>
    <string name="kiem_ke_tay">Kiểm kê tay</string>
    <string name="lich_su_kiem_ke">Lịch sử kiểm kê</string>
    <string name="so_phieu">Số phiếu</string>
    <string name="so_luong">Số lượng</string>
    <string name="ton_kho_hien_tai">Tồn kho hiện tại</string>
    <string name="so_luong_lech">Số lượng lệch</string>
    <string name="barcode">BarCode</string>
    <string name="ten_san_pham">Tên sản phẩm</string>
    <string name="luu">Lưu</string>
    <string name="ngay_can_date">Ngày cận date</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="save">Lưu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="so_lan_dong_bo">Số lần đồng bộ</string>
    <string name="kho">Kho</string>
    <string name="dvt">ĐVT</string>
    <string name="sl">SL</string>
    <string name="user">User</string>
    <string name="ten_thuoc">Tên thuốc</string>
    <string name="masp">MãSP</string>
    <string name="tong_dong">Tổng dòng</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="tong_hop">Tổng hợp</string>
    <string name="somethings_error">Somethings error!!!</string>
    <string name="please_contact_the_administer">Please contact the administer</string>
    <string name="loai_hang">Loại hàng</string>
    <string name="don_vi_tinh">Đơn vị tính</string>
    <string name="kho_hang">Kho hàng</string>
    <string name="hang_cho">Hàng chờ</string>
    <string name="scan_barcode">Scan BarCode</string>
    <string name="phieu_moi">Phiếu mới</string>
    <string name="dd_mm_yyyy">dd-MM-yyyy</string>
    <string name="loai_kiem_ke">Loại kiểm kê</string>
    <string name="vi_tri">Vị trí hộc</string>
    <string name="xac_nhan_kiem_ke">Xác nhận kiểm kê</string>
    <string name="xem_ton_kho">Xem tồn kho</string>
    <string name="ten_sp">Tên SP</string>
    <string name="ma_kho">Mã kho</string>
    <string name="ket_qua">Kết quả</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="sl_x_c_nh_n">SL Xác nhận</string>
    <string name="sl_l_nh">SL Lệnh</string>
    <string name="sl_kk">SL KK</string>
    <string name="sl_ht">SL HT</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="gi_tr_kk">Giá trị KK</string>
    <string name="cap_nhap">Cập nhật</string>
    <string name="msg_phieu_trung">Sản phẩm bạn vừa nhập đã tồn tại, bạn có thể lựa chọn cập nhật hoặc thêm phiếu mới:</string>
    <string name="msg_ket_qua_tim_kiem">Kết quả tìm kiếm:</string>
    <string name="phieu">Phiếu</string>
    <string name="xem">Xem</string>
    <string name="zero_value">0</string>
    <string name="two_dot">:</string>
    <string name="dash">-</string>
    <string name="sl_l1">SL_L1</string>
    <string name="sl_l3">SL_L3</string>
</resources>
