<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuitem_barcode"
        android:icon="@drawable/ic_my_barcode"
        android:title="@string/barcode"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuitem_save"
        android:icon="@drawable/ic_my_checkfile2"
        android:title="@string/phieu_moi"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuitem_refresh"
        android:icon="@drawable/ic_my_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menuitem_date"
        android:icon="@drawable/ic_my_calender_white"
        android:title="@string/date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_my_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>