<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:minHeight="45dp"
    tools:ignore="UselessParent">

    <TextView
        android:id="@+id/inv_view_pid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:width="45dp"
        android:gravity="center"
        android:minHeight="45dp"
        android:padding="4dp"
        android:singleLine="false"
        android:text="@string/masp"
        android:textIsSelectable="false"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded,TextViewEdits" />

    <TextView
        android:id="@+id/inv_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:minHeight="45dp"
        android:padding="4dp"
        android:singleLine="false"
        android:text="@string/ten_sp"
        android:textIsSelectable="false"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded,TextViewEdits" />

    <TextView
        android:id="@+id/inv_view_sl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:minHeight="45dp"
        android:padding="4dp"
        android:singleLine="false"
        android:text="@string/sl_l1"
        android:textIsSelectable="false"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded,TextViewEdits" />

    <TextView
        android:id="@+id/inv_view_sl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:gravity="center"
        android:minHeight="45dp"
        android:padding="4dp"
        android:singleLine="false"
        android:text="@string/sl_l3"
        android:textIsSelectable="false"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded,TextViewEdits" />

    <TextView
        android:id="@+id/inv_view_warehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:minHeight="45dp"
        android:singleLine="false"
        android:text="@string/ma_kho"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded,TextViewEdits" />

</TableRow>