<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    tools:context=".ConfirmFragment"
    android:focusable="true">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_bar_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorPrimaryDark"
        app:tabIndicatorGravity="bottom">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x_c_nh_n" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gi_tr_kk" />

    </android.support.design.widget.TabLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_bar_confirm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ccc"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/tong_dong" />

                <TextView
                    android:id="@+id/confirm_view_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:text="0"
                    tools:ignore="HardcodedText"
                    android:paddingStart="4dp" />

                <TextView
                    android:id="@+id/confirm_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/confirm_table_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:collapseColumns="0"
                android:isScrollContainer="true"
                android:overScrollMode="ifContentScrolls"
                android:shrinkColumns="2, 1, 6"
                android:stretchColumns="7"
                android:verticalScrollbarPosition="defaultPosition">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:minHeight="45dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/masp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:ellipsize="middle"
                        android:gravity="center"
                        android:inputType="textMultiLine"
                        android:minHeight="45dp"
                        android:padding="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:singleLine="false"
                        android:text="@string/ten_sp"
                        android:textColor="#FFFFFF"
                        android:textIsSelectable="false"
                        android:textSize="13sp"
                        tools:ignore="RtlHardcoded,TextViewEdits" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:ellipsize="middle"
                        android:gravity="center"
                        android:minHeight="45dp"
                        android:padding="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:singleLine="false"
                        android:text="@string/kho"
                        android:textColor="#FFFFFF"
                        android:textIsSelectable="false"
                        android:textSize="13sp"
                        tools:ignore="RtlHardcoded,TextViewEdits" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_column="2"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/sl_ht"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_column="3"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/sl_kk"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_column="4"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/sl_l_nh"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_column="5"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/sl_x_c_nh_n"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/gi_tr_kk"
                        android:textColor="#fff"
                        tools:ignore="RtlHardcoded" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/border_button_blue"
        android:text="@string/x_c_nh_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>